feat: created utils for authorization, validation on userDtoInput