@@ -1,8 +1,6 @@
 package com.bidpoint.backend.controller;
 
 import com.bidpoint.backend.dto.user.UserOutputDto;
-import com.bidpoint.backend.entity.Role;
-import com.bidpoint.backend.entity.User;
 import com.bidpoint.backend.exception.auth.SignInException;
 import com.bidpoint.backend.exception.auth.TokenIsMissingException;
 import com.bidpoint.backend.service.user.UserService;
@@ -10,9 +8,9 @@ import com.auth0.jwt.JWT;
 import com.auth0.jwt.JWTVerifier;
 import com.auth0.jwt.algorithms.Algorithm;
 import com.auth0.jwt.interfaces.DecodedJWT;
+import com.bidpoint.backend.util.AuthUtil;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
-import org.springframework.core.convert.ConversionService;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -24,7 +22,6 @@ import java.io.IOException;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static org.springframework.http.HttpHeaders.AUTHORIZATION;
 import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
@@ -34,17 +31,13 @@ import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
 @RequiredArgsConstructor
 public class AuthController {
     private final UserService userService;
-    private final ConversionService conversionService;
+    private final AuthUtil authUtil;
 
     @GetMapping("/me")
     public ResponseEntity<UserOutputDto> getUser(HttpServletRequest request, HttpServletResponse response) {
-        String authorizationHeader = request.getHeader(AUTHORIZATION);
-        String refresh_token = authorizationHeader.substring("Bearer ".length());
-        Algorithm algorithm = Algorithm.HMAC256("secret".getBytes());
-        JWTVerifier verifier = JWT.require(algorithm).build();
-        DecodedJWT decodedJWT = verifier.verify(refresh_token);
-        String username = decodedJWT.getSubject();
-        return ResponseEntity.ok().body(conversionService.convert(userService.getUser(username), UserOutputDto.class));
+        String username = authUtil.decodeAuthorizationHeader(request.getHeader(AUTHORIZATION)).getSubject();
+        UserOutputDto user = userService.getUser(username);
+        return ResponseEntity.ok().body(user);
     }
 
     @GetMapping("/refresh-token")
@@ -54,21 +47,18 @@ public class AuthController {
             throw new TokenIsMissingException();
 
         try {
-            String refresh_token = authorizationHeader.substring("Bearer ".length());
-            Algorithm algorithm = Algorithm.HMAC256("secret".getBytes());
-            JWTVerifier verifier = JWT.require(algorithm).build();
-            DecodedJWT decodedJWT = verifier.verify(refresh_token);
-            String username = decodedJWT.getSubject();
-            User user = userService.getUser(username);
+            String username = authUtil.decodeAuthorizationHeader(authorizationHeader).getSubject();
+
+            UserOutputDto user = userService.getUser(username);
             String access_token = JWT.create()
                     .withSubject(user.getUsername())
                     .withExpiresAt(new Date(System.currentTimeMillis() + 10 - 60 * 1000))
                     .withIssuer(request.getRequestURL().toString())
-                    .withClaim("roles",user.getRoles().stream().map(Role::getName).collect(Collectors.toList()))
-                    .sign(algorithm);
+                    .withClaim("roles",user.getRoles().stream().toList())
+                    .sign(authUtil.getAlgorithm());
             Map<String,String> tokens = new HashMap<>();
             tokens.put("access_token",access_token);
-            tokens.put("refresh_token",refresh_token);
+            tokens.put("refresh_token",authorizationHeader.substring("Bearer ".length()));
             response.setContentType(APPLICATION_JSON_VALUE);
             new ObjectMapper().writeValue(response.getOutputStream(),tokens);
         } catch (Exception e) {
